--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,10 +19,15 @@ body {
 
 }
 
-#user-register-form {
+#user-register-form,
+#chalogin-form {
     width: 30%;
     margin: auto;
     background-color: rgb(243, 154, 139);
     padding: 20px;
     border-radius: 10px;
+}
+
+#chalogin-form {
+    width: 20%;
 }
