--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     <div id="navbar">
         {% if request.user.is_authenticated %}
         歡迎{{request.user.username}}:
-        <a href="{% url 'create-userprofile' %}">新增基本資料</a>
+        <a href="{% url 'review-userprofile' %}">瀏覽基本資料</a>
         <a href="{% url 'user-logout' %}">登出</a>
 
         {% else %}
