--- a/userprofile/templates/userprofile/review-userprofile.html
+++ b/userprofile/templates/userprofile/review-userprofile.html
@@ -14,4 +14,9 @@
     電話:{{userprofile.tel}} <br>
     地址:{{userprofile.address}} <br>
 </div>
+
+<div id="edit-a-button">
+    <a href="{% url 'edit-userprofile' %}">修改基本資料</a>
+</div>
+
 {% endblock %}
