--- a/order/templates/order/confirm-order.html
+++ b/order/templates/order/confirm-order.html
@@ -20,7 +20,7 @@
         {% endfor %}
 
 
-        <div class="span" style="font-weight: 700; color: red; ">總金額:{{total_money}} <br></div>
+        <div class="span" style="font-weight: 700; color: red; ">總金額:{{total_amount}} <br></div>
 
         <hr>
         <br>
