--- a/static/css/style.css
+++ b/static/css/style.css
@@ -30,7 +30,9 @@ body {
 #add-cart-form,
 #review-cart,
 #edit-cart-form,
-#confirm-order-form {
+#confirm-order-form,
+#review-order,
+#review-order-detail {
     width: 30%;
     margin: auto;
     background-color: rgb(243, 154, 139);
@@ -59,7 +61,9 @@ body {
 #review-cart-a-button a,
 #edit-cart-a-button a,
 #clear-a-button a,
-#confirm-order-a-button a {
+#confirm-order-a-button a,
+#review-order-a-button a,
+#review-order-a-button a {
     background-color: aliceblue;
     margin-left: 10px;
     text-decoration: none;
@@ -74,7 +78,8 @@ body {
 #add-cart-a-button,
 #review-cart-a-button,
 #clear-a-button,
-#confirm-order-a-button {
+#confirm-order-a-button,
+#review-order-a-button {
     margin-top: 20px;
     text-align: center;
 }
