--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
     {% load static %}
+    <!-- bootstrap -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
+    <!-- 引入Chart.js庫，是一個 JavaScript圖表庫 -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     {% block style %}{% endblock %}
 </head>
 
