--- a/user/templates/user/user-register.html
+++ b/user/templates/user/user-register.html
@@ -21,7 +21,8 @@
         <label for=" {{form.password2.id_for_label}}">密碼確認</label> <br>
         {{form.password2}} <br>
 
-        <table>
+
+        <table id="user-register-form-table">
             <tr>
                 <td>帳號長度為150個字或以下，僅限字母、數字和 @/./+/-/_。</td>
             </tr>
@@ -38,6 +39,7 @@
                 <td>你的密碼不能全都是數字。</td>
             </tr>
         </table>
+
 
 
         <div id="message">
